✏️ : adjust tiny things

--- a/src/styles.css
+++ b/src/styles.css
@@ -116,13 +116,16 @@ button:disabled {
     border-left-color: #ccc;
   }
 }
+
 #logs-container {
+  display: none;
   background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   height: 100%;
   max-height: max-content;
   width: 100%;
 }
+
 #foreground {
   display: flex;
   flex-direction: column;
@@ -134,6 +137,7 @@ button:disabled {
   overflow-wrap: break-word;
   margin: 20px;
 }
+
 #logs {
   border: 1px solid #333;
 }
